--- a/style.css
+++ b/style.css
@@ -94,18 +94,46 @@ h4 {
 /*Mobile styles*/
 
 .grid {
-    display:grid;
+    display: grid;
     grid-template-columns: repeat(8, 1fr);
 }
-.site-nav{
-    margin:0 20px;
+
+.site-nav {
+    margin: 0 20px;
 }
-.site-nav ul{
-    display:none;
+
+.site-nav ul {
+    display: none;
 }
-.site-nav h1{
-    border-bottom:3px solid #FFC636;
+
+.site-nav h1 {
+    border-bottom: 3px solid var(--primary);
+    grid-column: 1/2;
+    grid-row: 1;
+    padding-bottom: 10px;
+
 }
+
+#welcome {
+    padding: 0 20px 20px 20px;
+}
+
+.welcome-text {
+    grid-column: 1/6;
+    grid-row: 1;
+}
+
+.welcome-img {
+    grid-column: 6/9;
+    grid-row: 1;
+}
+.welcome-img img{
+    max-width: 200%;
+}
+.welcome-text a{
+    margin:20px 0;
+}
+
 
 @media screen and (min-width:620px) {
     body {
@@ -121,6 +149,6 @@ h4 {
 
 @media screen and (min-width:1200px) {
     body {
-        font-size: 20px;
+        font-size: 30px; /*change to 20px
     }
 }
