--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ h4 {
 .grid {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
+    gap: 10px;
 }
 
 .site-nav {
@@ -108,7 +109,7 @@ h4 {
 
 .site-nav h1 {
     border-bottom: 3px solid var(--primary);
-    grid-column: 1/2;
+    grid-column: 1/4;
     grid-row: 1;
     padding-bottom: 10px;
 
@@ -127,17 +128,145 @@ h4 {
     grid-column: 6/9;
     grid-row: 1;
 }
-.welcome-img img{
+
+.welcome-img img {
     max-width: 200%;
 }
-.welcome-text a{
-    margin:20px 0;
+
+.welcome-text a {
+    margin: 20px 0;
 }
 
+#portfolio {
+    background-image: url(assets/square_bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    padding: 30px 20px;
+}
+
+#portfolio h3 {
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.projects a {
+    grid-column: 1/9;
+    margin: 20px 0;
+    display: flex;
+}
+
+.projects a* {
+    align-self: center;
+    margin: 0 20px;
+    max-width: 40%;
+}
+
+.projects h4 {
+    color: #9994f7;
+}
+
+#skills {
+    padding: 30px 20px;
+    background: #07083E;
+
+}
+
+#skills h3 {
+    margin-bottom: 0;
+    text-align: center;
+}
+
+#skills ul {
+    margin: 40px 0;
+}
+
+#skills li {
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.2);
+    grid-column: span 4;
+    text-align: center;
+}
+
+#skills li h4 {
+    text-align: center;
+}
+
+#skills img {
+    height: 80px;
+    margin: 10px auto;
+}
+
+#contact {
+    padding: 30px 20px;
+    background-color: #080936;
+}
+
+#contact h3,
+#contact p {
+    text-align: center;
+    margin-bottom: 0;
+}
+
+#contact form {
+    width: 80%;
+    max-width: 400px;
+    margin: 20px auto;
+    text-align: center;
+
+}
+
+#contact input,
+#contact textarea {
+    width: 100%;
+    margin: 10px 0;
+}
+
+#contact .button {
+    margin-top: 10px;
+}
+
+footer {
+    padding: 30px 20px;
+    background-color: #14153D;
+    background-image: url(assets/footer_image.png);
+    background-size: 30%;
+    background-repeat: no-repeat;
+    background-position: top center;
+}
+
+footer .copyright {
+    grid-column: 1/3;
+    font-size: 0.8em;
+}
+
+footer .social {
+    grid-column: 7/9;
+    display: flex;
+    justify-content: flex-end;
+}
+
+footer li {
+    margin: 0 6px;
+}
+
+footer img {
+    width: 20px;
+}
 
 @media screen and (min-width:620px) {
     body {
         font-size: 18px;
+    }
+    .welcome-text{
+        grid-column: 1/5;
+    }
+    .welcome-img {
+        grid-column: 5/9;
+        grid-row: 1;
+    }
+    .welcome-img img{
+        width:100%;
     }
 }
 
@@ -149,6 +278,6 @@ h4 {
 
 @media screen and (min-width:1200px) {
     body {
-        font-size: 30px; /*change to 20px
+        font-size: 20px;
     }
 }
