--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ h4 {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     gap: 10px;
+
 }
 
 .site-nav {
@@ -258,15 +259,49 @@ footer img {
     body {
         font-size: 18px;
     }
-    .welcome-text{
+
+    .welcome-text {
         grid-column: 1/5;
     }
+
     .welcome-img {
         grid-column: 5/9;
-        grid-row: 1;
     }
-    .welcome-img img{
-        width:100%;
+
+    .projects {
+        margin-top: 40px;
+    }
+
+    .projects img {
+        width: 100%;
+    }
+
+    .projects a {
+        grid-column: span 4;
+        display: block;
+        margin: 20px 50px;
+    }
+
+    .projects a:last-child {
+        grid-column: 3/7;
+    }
+
+    .projects a* {
+        margin: 10px;
+        max-width: 60%;
+        margin: 10px 20%;
+    }
+
+    .projects h4 {
+        text-align: center;
+    }
+
+    #skills {
+        padding: 30px 100px
+    }
+
+    footer {
+        background-size: 20%;
     }
 }
 
@@ -274,10 +309,138 @@ footer img {
     body {
         font-size: 18px;
     }
+
+    .welcome-img {
+        max-width: 50%;
+    }
+
+    .grid {
+        width: 100%;
+        max-width: 1060px;
+        margin: 0 auto;
+        box-sizing: border-box;
+    }
+
+    .leading {
+        margin: 20px 0;
+    }
+
+    .site-nav {
+        padding: 0 20px;
+    }
+
+    .site-nav h1 {
+
+        grid-column: 1/3;
+
+    }
+
+    .site-nav ul {
+        display: flex;
+        grid-column: 6/9;
+        justify-content: flex-end;
+        align-self: center;
+    }
+
+    .site-nav li {
+        margin: 0px 20px;
+    }
+
+    .welcome-text {
+        align-self: center;
+    }
+
+    #welcome {
+        padding-bottom: 40px;
+    }
+
+    .projects a:nth-child(1) {
+        grid-column: 2/4;
+    }
+
+    .projects a:nth-child(2) {
+        padding-top: 140px;
+        grid-column: 4/6;
+    }
+
+    .projects a:nth-child(3) {
+        grid-column: 6/8;
+    }
+
+    .projects a* {
+        max-width: 80%;
+        margin: 10px 10%;
+    }
+
+    #skills {
+        padding: 30px 20px;
+
+    }
+
+    #skills ul {
+        margin: 40px 0;
+    }
+
+    #skills li {
+        grid-column: span 2;
+    }
+
+    footer {
+        padding: 80px 20px;
+        background-size: 25%;
+    }
 }
 
 @media screen and (min-width:1200px) {
     body {
         font-size: 20px;
     }
+
+    #skills {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #skills h3 {
+        padding-bottom: 10px;
+    }
+
+    #skills ul {
+        align-self: center;
+    }
+
+    #welcome,
+    #portfolio,
+    #skills,
+    #contact {
+        padding: 90px 0;
+    }
+
+    .projects a:nth-child(1) {
+        grid-column: 1/3;
+    }
+
+    .projects a:nth-child(2) {
+        grid-column: 4/6;
+    }
+
+    .projects a:nth-child(3) {
+        grid-column: 7/9;
+    }
+
+    .projects a* {
+        max-width: 100%;
+        margin: 30px 0;
+    }
+
+    .footer {
+        padding: 80px 0px;
+        background-size: 30%;
+    }
+
+    footer img {
+        width: 30px;
+    }
+
 }
